# flashecho

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README-CN.md  README.md  _typos.toml  cliff.toml  deny.toml
script/: prompts.md
specs/: 0001-rust-transcript-idea.md  0002-improve.md  0003-deal-with-large-file.md  0004-banana-idea.md  0005-banana-plan.md  introductions.md
src/: batch_convert.rs  convert.rs  file_api.rs  gemini_api.rs  imagen.rs  imagen_api.rs  imagen_edit.rs  imagen_edit_api.rs  lib.rs
