[package]
name = "transcript-tool"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "convert"
path = "src/convert.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
